<resources>
    <string name="app_name">PantryPlanner</string>
    <string name="app_domain">cs.dartmouth.edu.pantryplanner</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- GCM related -->
    <string name="project_id">pantryplanner-160120</string>
    <string name="project_number">1006326355655</string>

    <!-- Login activity -->
    <string name="login_activity_title">Sign in</string>
    <string name="login_activity_prompt_email">Email</string>
    <string name="login_activity_prompt_password">Password</string>
    <string name="login_activity_login">Sign in</string>
    <string name="login_activity_register">Register</string>
    <string name="create_recipe_activity">Create Recipe</string>

    <!-- Register activity -->
    <string name="register_activity_title">Register</string>
    <string name="register_activity_prompt_first_name">First name</string>
    <string name="register_activity_prompt_last_name">Last name</string>
    <string name="register_activity_prompt_email">Email</string>
    <string name="register_activity_prompt_password">New password</string>
    <string name="register_activity_prompt_re_enter_password">Re-enter password</string>
    <string name="register_activity_register">Register</string>
    
    <string name="food_category_meat">Meat</string>
    <string name="food_category_diary">Diary</string>
    <string name="food_category_fruit">Fruit</string>
    <string name="food_category_vegetable">Vegetable</string>
    <string name="food_category_ingredient">Ingredient</string>
    <string name="food_category_other">Other</string>

</resources>
